# Ngine-Cmake

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt
NgineCore/: CMakeLists.txt
NgineCore/include/: Application.h  Core.hxx  EntryPoint.hxx  Event.h  Exception.h  FileUtils.h  GameObject.h  GraphicsCore.h  Ngine.hxx  StringUtils.h  Window.h
NgineCore/source/: Application.cxx  Event.cxx  Exception.cxx  FileUtils.cxx  GameObject.cxx  GraphicsCore.cxx  StringUtils.cxx  Window.cxx
NgineRuntime/: CMakeLists.txt
NgineRuntime/source/: Game.cxx  Game.h
docs/: bin_config.html  index.html  linux_build.html  styles.css  win32_build.html  xbox_build.html
loguru/: CMakeLists.txt
toolchain/: GDK-Targets.cmake  tc_Linux.cmake  tc_Win32.cmake  tc_Xbox.cmake
